src/scss/global/_typography.scss
@font-face {
  font-family: 'Basier Circle';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('/fonts/basiercircle-regular-webfont.woff2') format('woff2'),
    url('/fonts/basiercircle-regular-webfont.woff') format('woff');
}

@font-face {
  font-family: 'Basier Circle';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url('/fonts/basiercircle-bold-webfont.woff2') format('woff2'),
    url('/fonts/basiercircle-bold-webfont.woff') format('woff');
}

h1,
h2,
h3,
h4,
h5,
h6,
a,
button,
p {
  font-family: var(--ff-primary);
  color: var(--text-01, #fcfcfc);
  font-weight: 400;
  text-align: left;
  margin: 0;
  padding: 0;
}

h1,
.text-h1 {
  font-size: var(--fz-xxl);
  font-size: clamp(var(--fz-lg), 5.6vw, var(--fz-xxl));
  line-height: 1;
}

h2,
.text-h2 {
  font-size: var(--fz-base);
  line-height: 1;
}

h3,
.text-h3 {
  font-size: var(--fz-xsm);
  line-height: 1;
  text-transform: uppercase;
  color: var(--color-grey);
}

p,
.text-p {
  font-size: var(--fz-sm);
  line-height: 1.5;
  text-align: justify;
}

a {
  font-size: var(--fz-sm);
  line-height: 1;
  text-decoration: none;
  cursor: pointer;
}
.underline-effect {
  position: relative;

  &::after {
    content: '';
    overflow: hidden;
    width: 100%;
    background-color: var(--color-white);
    height: 1px;
    position: absolute;
    left: 0;
    bottom: -4px;
    max-width: 0;
    @include default-transition;
  }
  &:hover {
    &::after {
      max-width: 100%;
    }
  }
}

